<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gamerduck</groupId>
  <artifactId>LimboAuth</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
	<revision>0.0.1-beta</revision>
  </properties>
  <repositories>
	<repository>
	  <id>loohp-repo</id>
	  <url>https://repo.loohpjames.com/repository</url>
	</repository>
	<repository>
	  <id>ducks-repo</id>
	  <url>http://192.168.0.73:8081/repository/ducks-apis/</url>
	</repository>
  </repositories>
  <modules>
	<module>LimboAuth-API</module>
	<module>LimboAuth-Plugin</module>
	<module>LimboAuth-Encrypter</module>
  </modules>
</project>